--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.1.1",
     "tailwindcss": "^1.3.4",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
