--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
+    "react-spring": "^8.0.27",
     "tailwindcss": "^1.3.4",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
