--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss-cli": "^7.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
