--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-spring": "^8.0.27",
+    "recoil": "^0.0.10",
     "tailwindcss": "^1.3.4",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
