--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-react": "^7.9.4",
     "@emotion/core": "^10.0.7",
     "@emotion/styled": "^10.0.17",
+    "@toast-ui/react-image-editor": "^1.3.0",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
     "classnames": "^2.2.6",
