--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "classnames": "^2.2.6",
     "grapesjs": "^0.16.18",
     "grapesjs-react": "^3.1.1",
+    "nanoid": "^3.1.22",
     "postcss-cli": "^7.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -44,6 +45,7 @@
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-rangeslider": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-spring": "^8.0.27",
     "recoil": "^0.0.10",
