--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@emotion/core": "^10.0.7",
     "@emotion/styled": "^10.0.17",
     "@toast-ui/react-image-editor": "^1.3.0",
+    "aframe": "^1.2.0",
+    "aframe-particle-system-component": "^1.1.3",
+    "aframe-react": "^4.4.0",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
     "classnames": "^2.2.6",
