--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-loader": "^8.1.0",
     "classnames": "^2.2.6",
     "grapesjs": "^0.16.18",
+    "grapesjs-preset-webpage": "^0.1.11",
     "grapesjs-react": "^3.1.1",
     "nanoid": "^3.1.22",
     "postcss-cli": "^7.1.0",
@@ -47,6 +48,7 @@
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.10.0",
     "react-rangeslider": "^2.2.0",
     "react-router-dom": "^5.2.0",
