--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "babel-loader": "^8.1.0",
     "classnames": "^2.2.6",
     "grapesjs": "^0.16.18",
+    "grapesjs-plugin-forms": "^2.0.1",
     "grapesjs-preset-webpage": "^0.1.11",
     "grapesjs-react": "^3.1.1",
+    "grapesjs-tui-image-editor": "^0.1.3",
     "nanoid": "^3.1.22",
     "postcss-cli": "^7.1.0",
     "prop-types": "^15.7.2",
