--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "grapesjs-plugin-forms": "^2.0.1",
     "grapesjs-preset-webpage": "^0.1.11",
     "grapesjs-react": "^3.1.1",
-    "interactjs": "^1.10.8",
     "grapesjs-tui-image-editor": "^0.1.3",
+    "interactjs": "^1.10.8",
+    "mitt": "^2.1.0",
     "nanoid": "^3.1.22",
     "postcss-cli": "^7.1.0",
     "prop-types": "^15.7.2",
