--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: bcanseco/github-contribution-graph-action@v2
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GIT_EMAIL: you@youremail.com # replace me
+        GIT_EMAIL: udaypydi333@gmail.com
         MAX_DAYS: 90
         MIN_COMMITS_PER_DAY: 1
         MAX_COMMITS_PER_DAY: 5
