--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
     "classnames": "^2.2.6",
+    "express": "^4.17.1",
     "grapesjs": "^0.16.18",
     "grapesjs-plugin-forms": "^2.0.1",
     "grapesjs-preset-webpage": "^0.1.11",
@@ -53,6 +54,7 @@
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-hot-loader": "^4.13.0",
     "react-icons": "^3.10.0",
     "react-rangeslider": "^2.2.0",
     "react-router-dom": "^5.2.0",
@@ -88,6 +90,8 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack-bundle-analyzer": "^3.6.1",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-middleware": "^4.1.0",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
