--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
+    "express-http-proxy": "^1.6.2",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.0.4",
     "husky": "^4.2.5",
